--- a/SelfieSwift/Base.lproj/Main.storyboard
+++ b/SelfieSwift/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8152.3" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="w47-54-gha">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8164.2" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="w47-54-gha">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8124.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8135.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -18,7 +18,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Vlm-kv-LDb">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eh5-7I-v6b">
+                                <rect key="frame" x="0.0" y="520" width="600" height="80"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Let's See If This Appears" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Maw-Ik-YO7">
+                                        <rect key="frame" x="193" y="29" width="190" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="ftI-pX-TyG"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="Vlm-kv-LDb">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
@@ -38,39 +53,82 @@
                                                 </imageView>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="EditField" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="cRt-Ew-P2w">
                                                     <rect key="frame" x="64" y="26" width="495" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="495" id="Gg8-1k-NMK"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                     <textInputTraits key="textInputTraits" spellCheckingType="no" returnKeyType="done"/>
-                                                    <connections>
-                                                        <segue destination="z48-Rj-bdM" kind="show" identifier="show selfie" id="lLu-fy-MAg"/>
-                                                    </connections>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="Gg8-1k-NMK"/>
+                                                        </mask>
+                                                    </variation>
                                                 </textField>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="cRt-Ew-P2w" firstAttribute="leading" secondItem="prj-fp-5UB" secondAttribute="trailing" constant="8" id="KOw-h8-0vi"/>
+                                                <constraint firstItem="cRt-Ew-P2w" firstAttribute="leading" secondItem="prj-fp-5UB" secondAttribute="trailing" constant="8" symbolic="YES" id="KOw-h8-0vi"/>
+                                                <constraint firstItem="cRt-Ew-P2w" firstAttribute="leading" secondItem="VDE-mi-OV4" secondAttribute="leading" constant="64" id="cb8-Zd-QKm"/>
                                                 <constraint firstAttribute="bottomMargin" relation="greaterThanOrEqual" secondItem="prj-fp-5UB" secondAttribute="bottom" constant="4" id="rNN-5z-ZpI"/>
                                                 <constraint firstItem="prj-fp-5UB" firstAttribute="top" secondItem="VDE-mi-OV4" secondAttribute="topMargin" constant="4" id="rST-xZ-wjv"/>
                                                 <constraint firstAttribute="leadingMargin" secondItem="prj-fp-5UB" secondAttribute="leading" id="u50-CO-zq4"/>
                                                 <constraint firstItem="cRt-Ew-P2w" firstAttribute="centerY" secondItem="prj-fp-5UB" secondAttribute="centerY" id="z31-tw-Tqz"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="cb8-Zd-QKm"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="cRt-Ew-P2w" secondAttribute="trailing" constant="41" id="ESM-Vw-kF9"/>
+                                            <constraint firstAttribute="trailing" secondItem="cRt-Ew-P2w" secondAttribute="trailing" constant="41" id="bS6-J4-dxM"/>
                                         </constraints>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="ESM-Vw-kF9"/>
+                                            </mask>
+                                        </variation>
                                         <connections>
                                             <outlet property="selfieEditView" destination="cRt-Ew-P2w" id="Kgp-jU-S6w"/>
                                             <outlet property="selfieThumbNailView" destination="prj-fp-5UB" id="LA7-YA-84r"/>
+                                            <segue destination="z48-Rj-bdM" kind="show" identifier="show selfie" id="Wk0-DP-BCX"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="eh5-7I-v6b" firstAttribute="bottom" secondItem="f3E-1T-gaF" secondAttribute="top" id="0sg-Jb-CyJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="eh5-7I-v6b" secondAttribute="trailing" id="9Ck-Lb-xVd"/>
+                            <constraint firstItem="Vlm-kv-LDb" firstAttribute="bottom" secondItem="f3E-1T-gaF" secondAttribute="top" id="DtG-FA-veU"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="eh5-7I-v6b" secondAttribute="leading" id="Ltq-n3-Rt5"/>
+                            <constraint firstItem="Vlm-kv-LDb" firstAttribute="leading" secondItem="lvX-Cg-0bS" secondAttribute="leadingMargin" constant="-20" id="QGn-gn-TlK"/>
+                            <constraint firstItem="Vlm-kv-LDb" firstAttribute="trailing" secondItem="eh5-7I-v6b" secondAttribute="trailing" id="RnK-bD-uGM"/>
+                            <constraint firstItem="Vlm-kv-LDb" firstAttribute="top" secondItem="lvX-Cg-0bS" secondAttribute="top" id="UfV-ph-xen"/>
+                            <constraint firstItem="eh5-7I-v6b" firstAttribute="top" secondItem="lvX-Cg-0bS" secondAttribute="top" constant="520" id="Vso-uQ-DnP"/>
+                            <constraint firstAttribute="trailing" secondItem="eh5-7I-v6b" secondAttribute="trailing" id="Yr1-dS-Jfc"/>
+                            <constraint firstItem="eh5-7I-v6b" firstAttribute="leading" secondItem="lvX-Cg-0bS" secondAttribute="leading" id="gBg-hO-TEo"/>
+                            <constraint firstItem="Vlm-kv-LDb" firstAttribute="leading" secondItem="eh5-7I-v6b" secondAttribute="leading" id="gvG-mq-yib"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="QGn-gn-TlK"/>
+                                <exclude reference="9Ck-Lb-xVd"/>
+                                <exclude reference="Ltq-n3-Rt5"/>
+                                <exclude reference="Vso-uQ-DnP"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="Jed-Pc-NN8">
                         <barButtonItem key="rightBarButtonItem" systemItem="camera" id="QhU-8r-I1C">
                             <inset key="imageInsets" minX="-10" minY="0.0" maxX="-8" maxY="0.0"/>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="footerView" destination="eh5-7I-v6b" id="KPC-dD-vry"/>
+                        <outlet property="tableView" destination="Vlm-kv-LDb" id="9O8-gI-tXV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Yl-7P-LEg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
